@@ -64,6 +64,12 @@ group "Elm_Config" struct {
   value "year_min" int: 2;
   value "year_max" int: 137;
   value "softcursor_mode" uchar: 0;
+  value "auto_norender_withdrawn" uchar: 1;
+  value "auto_norender_iconified_same_as_withdrawn" uchar: 1;
+  value "auto_flush_withdrawn" uchar: 1;
+  value "auto_dump_withdrawn" uchar: 1;
+  value "auto_throttle" uchar: 1;
+  value "auto_throttle_amount" double: 0.0666666666;
   group "color_palette" list {
      group "Elm_Custom_Palette" struct {
         value "palette_name" string: "default";
